--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "video-class",
   "private": true,
-  "proxy": "https://video-class-api.vercel.app",
+  "proxy": "https://video-class-api.vercel.app/api/v1",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
